syntax = "proto3";

package user;

option go_package = "github.com/SirishaGopigiri/sample-grpc-server/user";

service Users {
  rpc GetUser (UserReq) returns (User);
  rpc GetUsers (EmptyRequest) returns (UserList);
  rpc CreateUser (User) returns (UserResponse);
  rpc UpdateUser (User) returns (UserResponse);
  rpc DeleteUser (UserReq) returns (UserResponse);
}

message EmptyRequest {}

message UserReq{
  string name = 1;
}

message UserList {
  repeated User users = 1;
}

message User {
  string name = 1;
  string email = 2;
  int32 age= 3;
}

message UserResponse {
  string message = 1;
}